# immanuelsavio.github.io

./: .gitignore  CNAME  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
.github/workflows/: deploy.yaml  deploy.yml
assets/: index-B8lB9AOP.css  index-BMW5Idls.js  index-BoPV2Jwq.css  index-to42Im3k.css
src/: App.jsx  index.css  main.jsx
src/Components/: About.jsx  Background.jsx  Contact.jsx  Education.jsx  EducationPublications.jsx  Experience.jsx  Footer.jsx  Hero.jsx  Home.jsx  HomePage.jsx  Navbar.jsx  Patents.jsx  Projects.jsx  Publications.jsx  SectionHeading.jsx  Skills.jsx  Talks.jsx  Timeline_Academic.jsx  Timeline_Professional.jsx
src/Components/Blog/: Blog.jsx  BlogPost.jsx
src/Components/Playground/: JsonToToon.jsx  Playground.jsx
src/Components/Syswin/: Syswin.jsx  SyswinAbout.jsx  SyswinHome.jsx  SyswinLanding.jsx  SyswinPortfolio.jsx  productData.js  syswin.css  syswinHelpers.jsx
src/Components/VelsKitchen/: About.jsx  Landing.jsx  MenuPage.jsx  Specials.jsx  Tasting.jsx  VelsKitchen.jsx  menuData.js  orderContext.js  velskitchen.css  vkHelpers.jsx
src/assets/vels_images/: image_map.txt  raw_items.json
src/data/: blog.json  resume.json
