[tool.poetry]
name = "immanuelsavio-github-io"
version = "0.1.0"
description = "Personal Poertfolio website"
authors = ["Immanuel Savio DOnbosco <immanuelsavio@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "immanuelsavio"}]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
